<resources>
    <string name="app_name">ContentProviderDemo</string>

    <string name="dnd_manual_toggle">勿扰开关</string>
    <string name="dnd_manual_toggle_summary">打开勿扰模式后拒接所有视频通话及语音通话</string>
    <string name="dnd_auto_rule_toggle">设置勿扰时间</string>
    <string name="end_select_time">选择勿扰时间</string>
    <string name="dnd_repeat_title">重复周期</string>
    <string name="dnd_auto_rule_start_day">从第一天</string>
    <string name="dnd_auto_rule_end_day">到第二天</string>
    <string name="dnd_effect_title">勿扰显示效果</string>

    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>

</resources>
